--- a/index.html
+++ b/index.html
@@ -54,40 +54,61 @@
             </div>
         </section>
 
-        <!-- Sección de Servicios -->
-        <section class="text-center" id="servicios">
-            <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Nuestros Servicios</h2>
-            <p class="text-gray-600 mb-12 max-w-2xl mx-auto">
-                Reparamos una amplia gama de electrodomésticos con la máxima profesionalidad.
-            </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Tarjeta de servicio 1 -->
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-200 transform hover:scale-105">
-                    <div class="text-indigo-600 text-5xl mb-4">
-                        <svg class="w-12 h-12 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 4a2 2 0 114 0v1a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-1a2 2 0 100 4h1a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-1a2 2 0 10-4 0v1a1 1 0 01-1 1H7a1 1 0 01-1-1v-3a1 1 0 00-1-1H4a2 2 0 110-4h1a1 1 0 001-1V7a1 1 0 011-1h3a1 1 0 001-1V4z"></path></svg>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">Reparación de Lavadoras</h3>
-                    <p class="text-gray-600">Solucionamos problemas de desagüe, centrifugado, ruidos extraños y mucho más.</p>
-                </div>
-                <!-- Tarjeta de servicio 2 -->
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-200 transform hover:scale-105">
-                    <div class="text-indigo-600 text-5xl mb-4">
-                        <svg class="w-12 h-12 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">Reparación de Neveras</h3>
-                    <p class="text-gray-600">Arreglamos fugas, problemas de enfriamiento, termostatos y fallos eléctricos.</p>
-                </div>
-                <!-- Tarjeta de servicio 3 -->
-                <div class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition-shadow duration-200 transform hover:scale-105">
-                    <div class="text-indigo-600 text-5xl mb-4">
-                        <svg class="w-12 h-12 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z"></path></svg>
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">Reparación de Hornos</h3>
-                    <p class="text-gray-600">Solución a problemas de temperatura, resistencias, fallos en el temporizador y más.</p>
-                </div>
-            </div>
-        </section>
-    </main>
+        <!-- Sección de Servicios Ampliada -->
+<section class="text-center mt-20" id="servicios">
+  <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Nuestros Servicios</h2>
+  <p class="text-gray-600 mb-12 max-w-2xl mx-auto">
+    Ofrecemos un servicio técnico especializado para todo tipo de electrodomésticos del hogar.
+  </p>
+
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-left max-w-5xl mx-auto">
+    
+    <!-- Servicio 1 -->
+    <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition duration-200">
+      <h3 class="text-xl font-bold text-indigo-600 mb-2">Reparación de Lavadoras</h3>
+      <ul class="list-disc list-inside text-gray-700 space-y-1">
+        <li>No desagua o no centrifuga</li>
+        <li>Hace ruidos extraños</li>
+        <li>La puerta no cierra bien</li>
+        <li>Fugas de agua</li>
+      </ul>
+    </div>
+
+    <!-- Servicio 2 -->
+    <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition duration-200">
+      <h3 class="text-xl font-bold text-indigo-600 mb-2">Reparación de Neveras</h3>
+      <ul class="list-disc list-inside text-gray-700 space-y-1">
+        <li>No enfría o congela en exceso</li>
+        <li>Fugas de gas o agua</li>
+        <li>Problemas eléctricos</li>
+        <li>Ruidos constantes</li>
+      </ul>
+    </div>
+
+    <!-- Servicio 3 -->
+    <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition duration-200">
+      <h3 class="text-xl font-bold text-indigo-600 mb-2">Reparación de Hornos</h3>
+      <ul class="list-disc list-inside text-gray-700 space-y-1">
+        <li>No calienta correctamente</li>
+        <li>Error en el termostato</li>
+        <li>Fallo en resistencias</li>
+        <li>La puerta no cierra</li>
+      </ul>
+    </div>
+
+    <!-- Servicio 4 -->
+    <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-lg transition duration-200">
+      <h3 class="text-xl font-bold text-indigo-600 mb-2">Otros electrodomésticos</h3>
+      <ul class="list-disc list-inside text-gray-700 space-y-1">
+        <li>Lavavajillas, secadoras, microondas, campanas</li>
+        <li>Instalación i posada en marxa</li>
+        <li>Pressupostos sense compromís</li>
+        <li>Servei urgent en 24 hores</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
 
     <!-- Sección de Pie de página (Footer) -->
     <footer class="bg-gray-900 text-gray-300 py-12" id="contacto">
@@ -109,3 +130,4 @@
     </footer>
 </body>
 </html>
+
