--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="#" class="text-2xl font-bold text-indigo-600">Reparaciones del Hogar</a>
             <nav class="hidden md:flex space-x-6">
-                <a href="#servicios" class="text-gray-600 hover:text-indigo-600 font-semibold transition-colors duration-200">Servicios</a>
+               <a href="javascript:void(0);" onclick="toggleServicios()" class="text-gray-600 hover:text-indigo-600 font-semibold transition-colors duration-200">Servicios</a>
                 <a href="#contacto" class="text-gray-600 hover:text-indigo-600 font-semibold transition-colors duration-200">Contacto</a>
                 <a href="#sobre-nosotros" class="text-gray-600 hover:text-indigo-600 font-semibold transition-colors duration-200">Sobre Nosotros</a>
             </nav>
@@ -55,12 +55,12 @@
         </section>
 
         <!-- Sección de Servicios Ampliada -->
-<section class="text-center mt-20" id="servicios">
+<section id="servicios" class="hidden text-center mt-20">
   <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Nuestros Servicios</h2>
   <p class="text-gray-600 mb-12 max-w-2xl mx-auto">
     Ofrecemos un servicio técnico especializado para todo tipo de electrodomésticos del hogar.
   </p>
-
+    
   <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-left max-w-5xl mx-auto">
     
     <!-- Servicio 1 -->
@@ -128,6 +128,14 @@
             <p class="mt-8 text-sm">&copy; 2024 Reparaciones del Hogar. Todos los derechos reservados.</p>
         </div>
     </footer>
+<script>
+  function toggleServicios() {
+    const section = document.getElementById("servicios");
+    section.classList.toggle("hidden");
+    section.scrollIntoView({ behavior: "smooth" });
+  }
+</script>
 </body>
 </html>
+
 
