--- a/index.html
+++ b/index.html
@@ -132,10 +132,15 @@
   function toggleServicios() {
     const section = document.getElementById("servicios");
     section.classList.toggle("hidden");
-    section.scrollIntoView({ behavior: "smooth" });
+    if (!section.classList.contains("hidden")) {
+      const yOffset = -100; // espai per evitar que el header tapi el títol
+      const y = section.getBoundingClientRect().top + window.pageYOffset + yOffset;
+
+      window.scrollTo({ top: y, behavior: "smooth" });
   }
 </script>
 </body>
 </html>
+
 
 
