Update_v2 index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p class="text-lg text-gray-600 mb-6">
                     Ofrecemos un servicio rápido, fiable y garantizado para todos tus electrodomésticos. Neveras, lavadoras, hornos y más.
                 </p>
-                <a href="#contacto" class="inline-block bg-indigo-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-indigo-700 transition-colors duration-200 transform hover:scale-105">
+                <a href="#reserva" class="inline-block bg-indigo-600 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:bg-indigo-700 transition-colors duration-200 transform hover:scale-105">
                     Solicita una cita hoy
                 </a>
             </div>
@@ -141,8 +141,41 @@
   }
   }
 </script>
+<section id="reserva" class="bg-white py-12 px-4 max-w-xl mx-auto rounded-xl shadow-md">
+  <h2 class="text-3xl font-bold text-center mb-6">Reserva una cita</h2>
+  <form action="https://formsubmit.co/umbrosellu@gmail.com" method="POST" class="space-y-4">
+
+    <input type="hidden" name="_subject" value="Nova reserva de cita des de la web">
+    <input type="hidden" name="_captcha" value="false">
+
+    <div>
+      <label for="nom" class="block font-medium text-gray-700">Nom</label>
+      <input type="text" id="nom" name="nom" required class="w-full border border-gray-300 rounded px-4 py-2">
+    </div>
+
+    <div>
+      <label for="telefon" class="block font-medium text-gray-700">Telèfon</label>
+      <input type="tel" id="telefon" name="telefon" required class="w-full border border-gray-300 rounded px-4 py-2">
+    </div>
+
+    <div>
+      <label for="email" class="block font-medium text-gray-700">Correu electrònic</label>
+      <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded px-4 py-2">
+    </div>
+
+    <div>
+      <label for="missatge" class="block font-medium text-gray-700">Missatge o hora desitjada</label>
+      <textarea id="missatge" name="missatge" rows="4" class="w-full border border-gray-300 rounded px-4 py-2"></textarea>
+    </div>
+
+    <button type="submit" class="w-full bg-indigo-600 text-white py-3 rounded font-semibold hover:bg-indigo-700 transition">
+      Enviar reserva
+    </button>
+  </form>
+</section>
 </body>
 </html>
+
 
 
 
