Update_v2 index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <input type="hidden" name="_subject" value="Nova reserva de cita des de la web">
     <input type="hidden" name="_captcha" value="false">
-
+    <input type="hidden" name="_next" value="https://uroselltest.github.io/#reserva">
     <div>
       <label for="nom" class="block font-medium text-gray-700">Nom</label>
       <input type="text" id="nom" name="nom" required class="w-full border border-gray-300 rounded px-4 py-2">
@@ -175,6 +175,7 @@
 </section>
 </body>
 </html>
+
 
 
 
