--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 </script>
 <section id="reserva" class="bg-white py-12 px-4 max-w-xl mx-auto rounded-xl shadow-md">
   <h2 class="text-3xl font-bold text-center mb-6">Reserva una cita</h2>
-  <form action="https://formsubmit.co/umbrosellu@gmail.com" method="POST" class="space-y-4">
+  <form action="https://formsubmit.co/umbrosell@gmail.com" method="POST" class="space-y-4">
 
     <input type="hidden" name="_subject" value="Nova reserva de cita des de la web">
     <input type="hidden" name="_captcha" value="false">
@@ -175,6 +175,7 @@
 </section>
 </body>
 </html>
+
 
 
 
